@@ -3,6 +3,8 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.19
 
+	- Fixed a URL rewrite bug in the web interface - local
+	  access was sometimes redirected away from localhost...
 	- The ppdOpen() functions could get in an infinite loop
 	  if the PPD file contained a keyword or text that was
 	  too large for the buffer.
